[project]
name = "agent"
version = "0.1.0"

description = "Agentic RAG using PydanticAI Framework and Crawl4AI"
authors = [
    {name = "Tomas Yanez",email = "tomas.yanez86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pydantic-ai (>=0.0.19,<0.0.20)",
    "openai (>=1.59.9,<2.0.0)",
    "crawl4ai (>=0.4.247,<0.5.0)",
    "supabase (>=2.11.0,<3.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "logfire (>=3.2.0,<4.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"